JVM 堆栈GC配置